--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
