--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_riverpod: ^2.3.6
+  path: ^1.8.3
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
