--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_local_notifications: ^14.1.1
   flutter_riverpod: ^2.3.6
   path: ^1.8.3
   sqflite: ^2.2.8+4
